First pass implementation of the authentication system
